--- a/examples/DotNetCore/WebDemoNet6/WebDemoNet6/Pages/Shared/_Layout.cshtml
+++ b/examples/DotNetCore/WebDemoNet6/WebDemoNet6/Pages/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - WebDemoNet6 - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; WebDemo for .Net 6 - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
