--- a/examples/DotNetCore/WebDemoNet6/WebDemoNet6/Pages/Beta.cshtml
+++ b/examples/DotNetCore/WebDemoNet6/WebDemoNet6/Pages/Beta.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
 @model BetaModel
 @{
-    ViewData["Title"] = "Beta Feature";
+    ViewData["Title"] = "Beta Home Page";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>The beta feature goes here.</p>
+<p>This is the beta website.</p>
