Removing redundant files and app configuration logo.

--- a/examples/PythonProvider/python-django-webapp-sample/hello_azure/templates/hello_azure/index.html
+++ b/examples/PythonProvider/python-django-webapp-sample/hello_azure/templates/hello_azure/index.html
@@ -9,7 +9,7 @@
    <body>
      <main>
         <div class="px-4 py-3 my-2 text-center">
-            <img class="d-block mx-auto mb-4" src="{% static 'images/azure-appconfiguration-icon.svg' %}" alt="Azure App Configuration Logo" width="192" height="192"/>
+            <img class="d-block mx-auto mb-4" src="{% static 'images/azure-icon.svg' %}" alt="Azure Logo" width="192" height="192"/>
             <!-- <img  src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
             <h1 class="display-6 fw-bold">Hello {{name}}</h1>
             <p class="fs-5">
