--- a/examples/PythonProvider/python-flask-webapp-sample/templates/index.html
+++ b/examples/PythonProvider/python-flask-webapp-sample/templates/index.html
@@ -8,7 +8,7 @@
    <body>
      <main>
         <div class="px-4 py-3 my-2 text-center">
-            <img class="d-block mx-auto mb-4" src="{{ url_for('static', filename='images/azure-appconfiguration-icon.svg') }}" alt="Azure App Configuration Logo" width="192" height="192"/>
+            <img class="d-block mx-auto mb-4" src="{{ url_for('static', filename='images/azure-icon.svg') }}" alt="Azure Logo" width="192" height="192"/>
             <!-- <img  src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
             <h1 class="display-6 fw-bold">Hello {{name}}</h1>
             <p class="fs-5">
@@ -16,7 +16,7 @@
             </p>
             <p class="fs-5">
               Resolved Key vault value: <b>{{key}}</b> (For demonstration purposes only)
-            </p>>
+            </p>
         </div>   
      </main>      
    </body>
