Updates to flask app.

--- a/examples/Python/python-flask-webapp-sample/templates/index.html
+++ b/examples/Python/python-flask-webapp-sample/templates/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>Hello App Configuration - Python Flask Example</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
-  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <html>
 
@@ -16,10 +15,7 @@
 <body style="background-color:{{color}}">
   <main>
     <div class="px-4 py-3 my-2 text-center">
-      <img class="d-block mx-auto mb-4" src="{{ url_for('static', filename='images/azure-icon.svg') }}" alt="Azure Logo"
-        width="192" height="192" />
-      <!-- <img  src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
-      <h1>Hello {{name}}</h1>
+      <h1>{{message}}</h1>
       <p class="fs-5">
         Resolved Key vault value: <b>{{key}}</b> (For demonstration purposes only)
       </p>
