Adding back color

--- a/examples/Python/python-flask-webapp-sample/templates/index.html
+++ b/examples/Python/python-flask-webapp-sample/templates/index.html
@@ -12,7 +12,7 @@
   }
 </style>
 
-<body>
+<body style="background-color:{{color}}">
   <main>
     <div class="px-4 py-3 my-2 text-center">
       <h1>{{message}}</h1>
