--- a/examples/Python/python-django-webapp-sample/hello_azure/templates/hello_azure/index.html
+++ b/examples/Python/python-django-webapp-sample/hello_azure/templates/hello_azure/index.html
@@ -1,27 +1,48 @@
-{% load static %}
-<!doctype html>
-
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Hello Azure - Python Django Example</title>
-  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Feature Management with Python</title>
+
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </head>
-<html>
-  
-<style>
-  h1 {
-    font-size: {{font_size}};
-  }
-</style>
-
-<body style="background-color:{{color}}">
-  <main>
-    <div class="px-4 py-3 my-2 text-center">
-      <h1>{{message}}</h1>
-      <p class="fs-5">
-        Resolved Key vault value: <b>{{key}}</b> (For demonstration purposes only)
-      </p>
+<body>
+    <header>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">TestFeatureFlags</a>
+        <button class="navbar-toggler" aria-expanded="false" aria-controls="navbarCollapse" aria-label="Toggle navigation" type="button" data-target="#navbarCollapse" data-toggle="collapse">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+            </li>
+            {% if beta %}
+            <li class="nav-item">
+                <a class="nav-link" href="/beta">Beta</a>
+            </li>
+            {% endif %}
+        </ul>
+        </div>
+    </nav>
+    </header>
+    <div class="container body-content">
+        <h1 class="mt-5">Welcome</h1>
     </div>
-  </main>
-</body>
+    <footer class="footer">
+        <div class="container">
+        <span class="text-muted">&copy; 2019 - Projects</span>
+    </div>
 
+    </footer>
+</body>
 </html>
