Upgrade WebDemo sample to .NET 8

--- a/examples/DotNetCore/WebDemo/WebDemo/Pages/Shared/_Layout.cshtml
+++ b/examples/DotNetCore/WebDemo/WebDemo/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Azure App Configuration Demo</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/WebDemoNet6.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/WebDemo.styles.css" asp-append-version="true" />
     <style>
         @RenderSection("InlineStyles", required: false)
     </style>
@@ -46,7 +46,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; WebDemo for .Net 6 - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; WebDemo for Azure App Configuration
         </div>
     </footer>
 
