--- a/examples/DotNetCore/WebDemo/WebDemo/Pages/_ViewImports.cshtml
+++ b/examples/DotNetCore/WebDemo/WebDemo/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using WebDemoNet6
-@namespace WebDemoNet6.Pages
+﻿@using WebDemo
+@namespace WebDemo.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsoft.FeatureManagement.AspNetCore
